# sentinel

./: .gitignore  .mise.toml  README.md  TODO_VIOLATIONS_RENAME.md  build.sh  docker-compose.yml  how-to-setup-generated-api-clients.md  package-lock.json
.cursor/: mcp.json
.github/: copilot-instructions.md
archive/sentinel-refactored/rust-oxc-bridge/: .gitignore  Cargo.toml
findings/: findings.json
metrics/: metrics.csv  metrics.json
sentinel-analysis/: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  build_rules.sh  entrypoint.sh  go.mod  metrics.json  metrics_visualizer.py  oxc_ast_documentation.md  requirements.txt  rules.json  run.sh  runIndexer.sh  run_test.sh  sentinel.json  startIndexer.sh  test_console_warn.ts  testing-output.json  visualize.sh
sentinel-analysis/.cursor/rules/: behaviour.mdc
sentinel-analysis/benches/: analyzer_bench.rs
sentinel-analysis/cmd/indexer/: main.go
sentinel-analysis/cmd/uploader/: category.go  handlers.go  main.go  server.go
sentinel-analysis/docs/: prd.md
sentinel-analysis/internal/analyzer/: analyzer.go
sentinel-analysis/internal/chunker/: chunker.go
sentinel-analysis/internal/crawler/: crawler.go
sentinel-analysis/internal/parser/oxc/: parser.go
sentinel-analysis/internal/patterns/: helpers.go  logger.go
sentinel-analysis/internal/patterns/helpers/: location_helpers.go  match_helpers.go  type_helpers.go
sentinel-analysis/js/: index.js  parser-service.js
sentinel-analysis/pkg/models/: analysis.go  models.go
sentinel-analysis/rules/angular/: angular-legacy-decorators.go  angular-observable-input.go
sentinel-analysis/rules/rxjs/: rxjs-imperative-subscription.go
sentinel-analysis/rules/typescript/: ts-type-assertions.go
sentinel-analysis/src/: analyzer.rs  exporter.rs  lib.rs  main.rs  metrics.rs  rules_registry.rs  test-empty-pattern.ts
sentinel-analysis/src/rules/: catalog.rs  mod.rs  no_debugger.rs  no_empty_pattern.rs
sentinel-analysis/src/rules/custom/: angular_component_class_suffix.rs  angular_directive_class_suffix.rs  angular_input_count.rs  angular_legacy_decorators.rs  angular_obsolete_standalone_true.rs  angular_output_event_collision.rs  mod.rs  typescript_non_null_assertion_operator.rs  typescript_type_assertion.rs
sentinel-analysis/src/utilities/: config.rs  file_utils.rs  logging.rs  mod.rs  threading.rs
sentinel-analysis/src/utilities/cli/: mod.rs
sentinel-analysis/test-files/: test-console-warn.ts
sentinel-analysis/test_files/: large.js  large.ts
sentinel-analysis/tests/fixtures/: test1.ts
sentinel-analysis/tests/rules/: angular_decorator_test.rs  mod.rs
sentinel-backend/: .gitignore  Capfile  Dockerfile  Gemfile  build.sh  docker-entrypoint.sh  dump.rdb
sentinel-frontend/: .eslintignore  .openapi-generator-ignore  Dockerfile  README.md  build.sh  nginx.conf  nx.json  (+4 more)
sentinel-refactored/rust-port/: .gitignore  Cargo.toml  README.md  build.rs  findings.json  metrics.csv  rules.json  run.sh  run_test.sh  sample3.ts  sentinel.json  sentinel.yaml
sentinel-refactored/rust-port/benches/: analyzer_benchmarks.rs  rule_benchmarks.rs
sentinel-refactored/rust-port/docs/testing/: angular_rules.md
sentinel-refactored/rust-port/findings/: findings.json
sentinel-refactored/rust-port/metrics/: metrics.csv  metrics.json
sentinel-refactored/rust-port/plugins/angular_rules/: Cargo.toml
sentinel-refactored/rust-port/plugins/angular_rules/src/: lib.rs
sentinel-refactored/rust-port/results/: findings.json  performance.json
sentinel-refactored/rust-port/src/: analyzer.rs  config.rs  exporter.rs  lib.rs  main.rs  metrics.rs  metrics_exporter.rs  performance.rs  reporter.rs  rules.rs  rules_registry.rs  scanner.rs  test.ts  utilities.rs  visualization.rs
sentinel-refactored/rust-port/src/rules/: LOCATION_HELPERS.md  import_rule.rs  mod.rs  no_debugger.rs  no_empty_pattern.rs
sentinel-refactored/rust-port/src/rules/custom/: angular_component_class_suffix.rs  angular_component_max_inline_declarations.rs  angular_input_count.rs  angular_legacy_decorators.rs  angular_observable_inputs.rs  angular_obsolete_standalone_true.rs  mod.rs  no_console.rs  no_console_warn.rs  no_console_warn_visitor.rs
sentinel-refactored/rust-port/src/rules/custom/angular/: angular_import_rules.rs  decorator_detection_rule.rs  directive_selector_rule.rs  mod.rs
sentinel-refactored/rust-port/src/rules/custom/general/: import_count.rs  mod.rs
sentinel-refactored/rust-port/src/rules/custom/rxjs/: mod.rs  rxjs_import_rules.rs
sentinel-refactored/rust-port/src/rules/custom/typescript/: type_assertion_detection_rule.rs
sentinel-refactored/rust-port/src/utilities/: config.rs  file_utils.rs  logging.rs  mod.rs  threading.rs
sentinel-refactored/rust-port/tests/: mod.rs
sentinel-refactored/rust-port/tests/fixtures/: test2.ts  test3.ts
sentinel-refactored/rust-port/tests/rules/: angular_decorator_test.rs  mod.rs
(+784 files in other folders)
