[package]
name = "typescript-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.4"
# For the future integration with oxc parser
oxc_allocator = "0.62.0"
oxc_parser = "0.62.0"
oxc_ast = "0.62.0"
oxc_span = "0.62.0"
oxc_semantic = "0.62.0"
# For config file parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
