[package]
name = "typescript-analyzer"
version = "0.1.0"
edition = "2021"

[features]
default = []
custom_rules = []

[dependencies]
walkdir = "2.4"
# For the future integration with oxc parser
oxc_allocator = "0.62.0"
oxc_parser = "0.62.0"
oxc_ast = "0.62.0"
oxc_ast_visit = "0.62.0"
oxc_span = "0.62.0"
oxc_semantic = "0.62.0"
oxc_diagnostics = "0.62.0"
# For config file parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# For timestamps in metrics
chrono = "0.4"
# For parallel processing
rayon = "1.8"
# For getting CPU cores count
num_cpus = "1.16"
tabled = "0.18.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "rule_benchmarks"
harness = false
required-features = ["custom_rules"]
