[package]
name = "oxc-parser-bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "oxc_parser_bridge"
crate-type = ["staticlib", "cdylib"]

[dependencies]
oxc_allocator = "0.4.0"
oxc_parser = "0.4.0"
oxc_ast = "0.4.0"
oxc_span = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1 