[package]
name = "angular_rules_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Compile to dynamic library

[dependencies]
anyhow = "1.0"
# Need access to the Rule trait and other types from the main crate
# Adjust path as necessary based on your workspace structure
typescript_analyzer = { path = "../../", package = "typescript-analyzer" }

# Dependencies needed by the rule itself
oxc_allocator = "0.62.0"
oxc_parser = "0.62.0"
oxc_ast = "0.62.0"
oxc_span = "0.62.0" 